# fastapi-todos

./: .coveragerc  .gitignore  .pdm-python  .pdm.toml  Dockerfile  LICENSE  Makefile  Pipfile  Pipfile.donotuse  Pipfile.lock.donotuse  README.md  gunicorn.conf.py  main.py  mypy.ini  pyproject.toml  start.sh
.pytype/: build.ninja
.pytype/imports/: books.api.imports  books.routers.imports  main.imports  todos.db.imports  todos.routers.imports
.pytype/pyi/books/: models.pyi
.pytype/pyi/todos/: models.pyi
deployments/k8s/: deployments.yaml  service.yaml
fastapi_todos/: custom_logging.py  main.py
fastapi_todos/books/: api.py  models.py  routers.py
fastapi_todos/random_taco/: payload.json
fastapi_todos/todos/: db.py  models.py  routers.py
src/fastapi_todos/: custom_logging.py
src/fastapi_todos/books/: __init__.py  api.py  routers.py
src/fastapi_todos/todos/: __init__.py  db.py  models.py  routers.py
tests/books/: test_booksapi.py
tests/todos/: test_db.py
