[project]
name = "fastapi-todos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/

dependencies = [
    "fastapi[standard]",
    "requests",
    "uvicorn[standard]",
    "loguru",
    "tinydb",
    "gunicorn",
    "httpx[http2]",
]

[project.scripts]
fastapi-todos = "fastapi_todos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-datadir",
    "pytest-faker",
    "pytest-html",
    "pytest-mock",
    "pytest-print",
    "ruff",
]
